# RashidLab_Bulk_RNAseq_pipeline

./: README.md  requirements.txt  streamlit_app.py
deseq2_enrich/: LICENSE  README.md  genesets.py  plots.py  pyproject.toml  requirements.txt
deseq2_enrich/app/: streamlit_app.py
deseq2_enrich/deseq2_enrich/: README.md  __init__.py  cli.py  config.py  degs.py  gsea.py  io.py  ora.py  ortho.py  pipeline.py  plots.py  rank.py  requirements.txt
deseq2_enrich/deseq2_enrich.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deseq2_enrich/deseq2_enrich/app/: streamlit_app.py
deseq2_enrich/deseq2_enrich/deseq2_enrich/: genesets.py
deseq2_enrich/deseq2_enrich/deseq2_enrich.egg-info/: top_level.txt
deseq2_enrich/deseq2_enrich/sample_data/: DESeq2_chicken_demo.tsv
deseq2_enrich/deseq2_enrich/tests/: test_degs.py  test_rank.py
deseq2_enrich/sample_data/: DESeq2_Sacral_vs_Sacralized_Caudal_all.tsv
deseq2_enrich/tests/: conftest.py  test_io.py  test_ora_intersections.py  test_pipeline_mocked.py
streamlit/: config.toml
