[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deseq2_enrich"
version = "0.1.0"
description = "DESeq2 -> ORA/GSEA enrichment pipeline and Streamlit app (chicken-first, pure Python)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Galen O'Shea-Stone" }]
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.1",
    "numpy>=1.26",
    "gseapy>=1.1,<2",
    "gprofiler-official>=1.0",
    "plotly>=5.22",
    "matplotlib>=3.8",
    "networkx>=3.1",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
deseq2-enrich = "deseq2_enrich.cli:main"

[tool.setuptools.packages.find]
include = ["deseq2_enrich*"]
exclude = ["tests*", "app*", "sample_data*"]
